--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,8 @@
 homepage: "https://www.amplitude.com/"
 documentation: "https://www.docs.developers.amplitude.com/data/sdks/marketing-analytics-browser/"
 versions:
+  - sha: b17f8c1f17a8fd1278379745bffc408eb452d90c
+  - changeNotes: Improve the usage of default Amplitude Analytics instance.
   - sha: ec8c7f94d3a6b5a2431ccd5169f217e5906b0c0f
     changeNotes: Improve setting up multiple Amplitude Analytics instances.
   - sha: b8743516910447af06b9359662de97333083d157
