--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,8 +1,10 @@
 homepage: "https://www.amplitude.com/"
 documentation: "https://www.docs.developers.amplitude.com/data/sdks/marketing-analytics-browser/"
 versions:
+  - sha: 61984dd2fc5735217cbef817603dcb81056077b1
+    changeNotes: Set init as the default tag type.
   - sha: b17f8c1f17a8fd1278379745bffc408eb452d90c
-  - changeNotes: Improve the usage of default Amplitude Analytics instance.
+    changeNotes: Improve the usage of default Amplitude Analytics instance.
   - sha: ec8c7f94d3a6b5a2431ccd5169f217e5906b0c0f
     changeNotes: Improve setting up multiple Amplitude Analytics instances.
   - sha: b8743516910447af06b9359662de97333083d157
