--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,8 @@
 homepage: "https://www.amplitude.com/"
 documentation: "https://www.docs.developers.amplitude.com/data/sdks/marketing-analytics-browser/"
 versions:
+  - sha: 9e71a8204d409e7072de282aab08272a5be14528
+    changenotes: Capture the web attribution updates while no referrer.
   - sha: a5028f68922cad46f077279a701410d843cd49ce
     changenotes: Fix the no referrer event within in same session unset the web attribution issue.
   - sha: 240a7700f791e8881c01f1fc1f751cd132488419
