--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,8 @@
 homepage: "https://www.amplitude.com/"
 documentation: "https://www.docs.developers.amplitude.com/data/sdks/marketing-analytics-browser/"
 versions:
+  - sha: 89382e7ca8ff517364a678e643c3894040d1f609
+    changeNotes: Revert the wrapper SDK back to 2.5.2
   - sha: 5b387eab7d5935a62b5f365be5ac9992a3e3c148
     changeNotes: Fix configuration options - trackingOptions and cookieOptions
   - sha: 26b60deff0e2d70b358fce79da015b851189544e
