Make the update metadata CI manually triggered

--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -1,11 +1,7 @@
 name: Update Metadata
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - template.tpl  # The workflow should only trigger on changes to template.tpl
+  workflow_dispatch:
 
 jobs:
   update-metadata:
