--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,7 +2,7 @@ homepage: "https://www.amplitude.com/"
 documentation: "https://www.docs.developers.amplitude.com/data/sdks/marketing-analytics-browser/"
 versions:
   - sha: 45704170a76b625045a52a7a773ee363ab299a79
-    changeNotes: fix support identify.unset versions: bump to 2.11.10 (#72)
+    changeNotes: fix support identify.unset versions bump to 2.11.10 (#72)
   - sha: 011ad846d801d2e20e7face67d7dea13152d23dc
     changeNotes: chore add note for group properties (#71)
   - sha: e6b0b6602f5ab7c0680889f65a660e5e1528dc16
