--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -13,7 +13,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-        # Qutoes in message are not allowed
+      - name: Install dependencies and build
+        run: |
+          yarn install
+          yarn build
+
+      - name: Tests
+        run: |
+          yarn test
+
+        # Quotes in message are not allowed
       - name: Update metadata.yaml
         run: |
           SHA=$(git rev-parse HEAD)
