--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "The amplitude GTM template with @amplitude/analytics-browser internal",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Tests are not implemented yet\"",
     "build": "node scripts/build-template.js",
     "dev": "vite serve"
   },
