--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,11 @@ jobs:
         run: |
           yarn install
           yarn build
+          # Check that the template didn't change
+          if ! git diff --quiet; then
+            echo "❌ The template changed. Please run yarn build and commit the changes."
+            exit 1
+          fi
 
       - name: Tests
         run: |
