add setup-env feature to dev

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,1 @@
-# Rename this file to ".env" and replace your API key here
-VITE_AMPLITUDE_API_KEY='YOUR API KEY'
+VITE_AMPLITUDE_API_KEY='$API_KEY'
