--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
             exit 1
           fi
 
-      - name: Tests
+      - name: Lint andTests
         run: |
+          yarn lint
           yarn test
