--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "node scripts/build-template.js && node scripts/generate-types.js",
     "dev": "yarn setup-env && vite serve",
     "prepare": "husky",
-    "setup-env": "node scripts/setup-env.js"
+    "setup-env": "node scripts/setup-env.js",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
+    "type-check": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -24,9 +27,14 @@
     "ejs": "^3.1.10"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
     "husky": "^9.1.7",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
+    "typescript": "^5.0.0",
     "vite": "^7.1.6"
   }
 }
