--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/amplitude/amplitude-browser-sdk-gtm-template#readme",
   "dependencies": {
+    "@babel/preset-env": "^7.28.3",
     "ejs": "^3.1.10"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "husky": "^9.1.7",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
+    "ts-jest": "^29.4.4",
     "typescript": "^5.0.0",
     "vite": "^7.1.6"
   }
