--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
             exit 1
           fi
 
-      - name: Tests
+      - name: Lint and Tests
         run: |
+          yarn lint
           yarn test
