add test coverage + coverage minimums (#89)
* chore: separate GTM JS from template

* update README.md

* chore: add PR validation job

* verify templates have proper variables

* move template-info and parameters to separate json files

* add more types

* husky test

* another husky test

* again

* again

* use ts for non libs/ files

* add type generator

* fix build-template

* add setup-env feature to dev

* add unit tests

* move polyfill out into separate modules

* clean up polyfill syntax

* moar fixes

* add linting

* increase test coverage

* enhance test coverage further

* add coverage minimums

* add coverage minimums

* bump statements/functions/lines to 100

--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/amplitude/amplitude-browser-sdk-gtm-template#readme",
   "dependencies": {
-    "ejs": "^3.1.10"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.3",
+    "ejs": "^3.1.10",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
