add sync script

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "node scripts/build-template.js && node scripts/generate-types.js",
+    "sync": "node scripts/sync-template.js",
     "dev": "yarn setup-env && vite serve",
     "prepare": "husky",
     "setup-env": "node scripts/setup-env.js",
