--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -7,6 +7,8 @@ on:
         required: true
 
 jobs:
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   update-metadata:
     runs-on: ubuntu-latest
     steps:
@@ -37,11 +39,12 @@ jobs:
       - name: Create Github Release
         uses: actions/create-release@v1
         with:
+          tag_name: ${{ steps.update-metadata.outputs.new_version }}
           release_name: ${{ steps.update-metadata.outputs.new_version }}
-          release_body: ${{ github.event.inputs.releaseDescription }}
-          release_draft: ${{ github.ref != 'refs/heads/main' }}
-          release_prerelease: false
-          release_title: ${{ steps.update-metadata.outputs.new_version }}
+          body: ${{ github.event.inputs.releaseDescription }}
+          draft: ${{ github.ref != 'refs/heads/main' }}
+          prerelease: false
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit and push if changed
         run: |
