--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -7,6 +7,7 @@ on:
         required: true
 
 jobs:
+  runs-on: ubuntu-latest
   update-metadata:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
