--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Create Github Release
         run: |
           # Extract just the SHA for the tag name
-          SHA=$(git rev-parse HEAD)
+          SHA=$(git rev-parse --short=5 HEAD)
           TAG_NAME="v$SHA"
           
           # Determine if this should be a draft
