--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -40,7 +40,12 @@ jobs:
         run: |
           # Extract just the SHA for the tag name
           SHA=$(git rev-parse --short=5 HEAD)
+          FULL_SHA=$(git rev-parse HEAD)
           TAG_NAME="GTM Template Version: $SHA"
+          
+          # Create the named template file
+          TEMPLATE_NAME="amplitude-gtm.$FULL_SHA.tpl"
+          cp template.tpl "$TEMPLATE_NAME"
           
           # Determine if this should be a draft
           IS_DRAFT=""
@@ -53,7 +58,8 @@ jobs:
             --title "$TAG_NAME" \
             --notes "${{ github.event.inputs.releaseDescription }}" \
             $IS_DRAFT \
-            --repo ${{ github.repository }}
+            --repo ${{ github.repository }} \
+            "$TEMPLATE_NAME"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
