--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
   },
   "homepage": "https://github.com/amplitude/amplitude-browser-sdk-gtm-template#readme",
   "dependencies": {
+    "yaml-lint": "^1.7.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.3",
     "@playwright/test": "^1.55.1",
-    "ejs": "^3.1.10",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "ejs": "^3.1.10",
     "eslint": "^8.57.0",
     "husky": "^9.1.7",
     "jest": "^30.1.3",
