--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Install dependencies and build
         run: |
-          yarn install
-          yarn build
+          pnpm install
+          pnpm build
           # Check that the template didn't change
           if ! git diff --quiet; then
-            echo "❌ The generated template (template.tpl) that was committed is different from the generated template. Please run yarn build and commit the changes."
+            echo "❌ The generated template (template.tpl) that was committed is different from the generated template. Please run pnpm build and commit the changes."
             exit 1
           fi
 
@@ -32,5 +35,5 @@ jobs:
 
       - name: Lint and Tests
         run: |
-          yarn lint
-          yarn test
+          pnpm lint
+          pnpm test
