--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,7 +19,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
+      
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
 
       - name: Cache dependencies
         uses: actions/cache@v3
