--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install project dependencies
         run: |
-          pnpm install --frozen-lockfile
+          pnpm install
 
       - name: Build all packages
         run: |
