--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amplitude-browser-sdk-gtm-template",
-  "packageManager": "pnpm@4.2.0",
+  "packageManager": "pnpm@10.26.1+sha512.664074abc367d2c9324fdc18037097ce0a8f126034160f709928e9e9f95d98714347044e5c3164d65bd5da6c59c6be362b107546292a8eecb7999196e5ce58fa",
   "private": true,
   "version": "1.0.0",
   "description": "The amplitude GTM template with @amplitude/analytics-browser internal",
