chore: migrate browser-sdk-gtm to pnpm (#110)

--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -15,14 +15,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Install dependencies and build
         run: |
-          yarn install
-          yarn build
+          pnpm install
+          pnpm build
 
       - name: Tests
         run: |
-          yarn test
+          pnpm test
 
         # Quotes in message are not allowed
       - name: Update metadata.yaml
