--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,13 +19,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
+      
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
 
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
           path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -34,11 +36,11 @@ jobs:
 
       - name: Install project dependencies
         run: |
-          yarn install --frozen-lockfile
+          pnpm install
 
       - name: Build all packages
         run: |
-          yarn build
+          pnpm build
 
       - name: Create .env file
         run: |
@@ -47,7 +49,7 @@ jobs:
 
       - name: Run Playwright tests
         run: |
-          yarn test:e2e
+          pnpm test:e2e
 
       - name: Upload Playwright Report
         if: always()
